2011-06-16  Eric Wasylishen  <ewasylishen@gmail.com>

	* common_ArrowDown.tiff:
	* common_ArrowRight.tiff:
	* common_ArrowUp.tiff:
	* common_3DArrowDown.tiff:
	* common_ArrowDownH.tiff:
	* common_ArrowLeft.tiff:
	* common_ArrowLeftH.tiff:
	* common_3DArrowLeft.tiff:
	* common_ArrowUpH.tiff:
	* common_3DArrowUp.tiff:
	* common_ArrowRightH.tiff:
	* common_3DArrowRight.tiff: Ensure both sub-images have the same
	colorspace

2011-06-16  Eric Wasylishen  <ewasylishen@gmail.com>

	* Images/common_3DArrowRightH.tiff: Add high-res version

2011-06-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* Headers/AppKit/NSImageCell.h:
	* Source/NSImageCell.m: Add support for NSImageScaleProportionallyUpOrDown

2011-06-14  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSImage.m: Use -bestRepresentationForRect:context:hints: in
	-guiDrawInRect:... as well.

2011-06-15 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSSegmentedCell.m (-initWithCoder:): Protect against
	selected segment being -1.

2011-06-14  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSImage.m: Implement -bestRepresentationForRect:context:hints:,
	which chooses the smallest rep larger than or equal to the provided size.

	Modify -nativeDrawInRect:... to use the above method for choosing a rep.

2011-06-14  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSImage.m (-guiDrawInRect:...): Handle dstRect with a zero size

2011-06-14  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSImage.m: Remove unnecessary DPSgsave/DPSgrestore I added
	earlier in -nativeDrawInRect:... and replace them with saving/restoring
	the transformation matrix. The DPSgsave/DPSgrestore were causing problems
	when drawing images with a non-rectangular clipping area.

2011-06-14  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSImage.m: Tidy the -composite*/-dissolve* methods

2011-06-13  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSTextView.m (-scrollRangeToVisible:): Work with ranges