@@ -1,3 +1,8 @@
+2011-06-19 Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/NSView.m (-setBounds:, -setBoundsSize:): Rewrite of this
+	methods plus a few helpers. We pass now all the frame/bounds test cases.
+
 2011-06-16  Eric Wasylishen  <ewasylishen@gmail.com>
 
 	* common_ArrowDown.tiff:
